# hexlet-flask-example

./: Makefile  example.py  pyproject.toml  user.json
templates/users/: edit.html  index.html  new.html  new_session.html  show.html
